--- a/imports/client/styles/components/_boxed-view.scss
+++ b/imports/client/styles/components/_boxed-view.scss
@@ -18,6 +18,7 @@
 
 .boxed-view--box {
   background-color: $boxed-view-bg;
+  border: 1px solid $boxed-view-border-color;
   padding: 2.4rem;
   text-align: center;
   width: 24rem;
