--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -2,6 +2,7 @@
 @import './base';
 @import './components/boxed-view';
 @import './components/buttons';
+@import './components/editor';
 @import './components/header';
 @import './components/page-content';
 @import './components/checkbox';
