--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -4,10 +4,13 @@ $white: #fff;
 $black: #000;
 $orang: #FF5733;
 $cool-green: #2ECC71;
-//$brand-primary: #5b4681;
-$brand-primary: $cool-green;
+$brand-primary: #397ab1;
+//$brand-primary: $cool-green;
 $light-gray: #f9f9f9;
 $dark-gray: #777;
+//Body
+$body-background-color: #fafafa;
+$body-default-color: #333;
 
 
 // Space
@@ -23,6 +26,7 @@ $input-border: $gray;
 // boxed-view
 $boxed-view-overlay-bg: $gray;
 $boxed-view-bg: $white;
+$boxed-view-border-color: $gray;
 
 
 // Buttons
@@ -35,11 +39,17 @@ $button--secondary-border-color: $gray;
 
 // header
 
-$header-bg: $cool-green;
+$header-bg: $brand-primary;
 $header-color: $white;
-$site-max-width: 50rem;
+$site-max-width: 100rem;
+$header-height: 6rem;
 
 // items
 $item-bg: $light-gray;
 $item-border: darken($item-bg, 8%);
 $item-text-color: $dark-gray;
+
+// page-content
+$page-content-sidebar-width: 30rem;
+$page-content-main-width: calc(#{$site-max-width} - #{$page-content-sidebar-width});
+$page-content-height: calc(100vh - #{$header-height});
