--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -4,6 +4,7 @@
 }
 .header--content {
   display: flex;
+  height: $header-height;
   justify-content: space-between;
   max-width: $site-max-width;
   margin: 0 auto;
