--- a/imports/client/styles/components/_item.scss
+++ b/imports/client/styles/components/_item.scss
@@ -1,3 +1,13 @@
+// item-list
+.item-list {
+  background-color: $white;
+  border: 1px solid $gray;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+
+// item
 .item {
   background: $item-bg;
   border: 1px solid $item-border;
