--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -1,5 +1,16 @@
 .page-content {
+  display: flex;
   max-width: $site-max-width;
   margin: 0 auto;
   padding: $space;
+  height: $page-content-height;
+}
+.page-content--sidebar {
+  display: flex;
+  width: $page-content-sidebar-width;
+}
+
+.page-content--main {
+  display: flex;
+  width: $page-content-main-width;
 }
