--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -11,7 +11,7 @@ html {
 body {
   background-color: $body-background-color;
   color: $body-default-color;
-  font-family: monospace, sans-serif, Halvetica;
+  font-family: $body-default-font-family;
   font-size: $base-font-size;
 }
 
@@ -35,9 +35,12 @@ p {
 
 input[type=text],
 input[type=email],
-input[type=password] {
+input[type=password],
+textarea {
   border: 1px sold $input-border;
   font-size: $base-font-size;
+  color: $body-default-color;
+  font-family: $body-default-font-family;
   margin-bottom: $space;
   padding: 1rem;
 }
