--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -11,17 +11,21 @@ $dark-gray: #777;
 //Body
 $body-background-color: #fafafa;
 $body-default-color: #333;
-
+$body-default-font-family: monospace, sans-serif, Halvetica, Arial;
 
 // Space
 $space: 1.4rem;
+$large-space: 2.8rem;
+$site-max-width: 100rem;
 
 // Font Sizes
 $base-font-size: 1.4rem;
-$larg-font-size: 1.5rem;
+$larg-font-size: 2.2rem;
+
 
 //From
 $input-border: $gray;
+$input-spacing: 1rem;
 
 // boxed-view
 $boxed-view-overlay-bg: $gray;
@@ -41,7 +45,6 @@ $button--secondary-border-color: $gray;
 
 $header-bg: $brand-primary;
 $header-color: $white;
-$site-max-width: 100rem;
 $header-height: 6rem;
 
 // items
