--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -48,9 +48,7 @@ $header-color: $white;
 $header-height: 6rem;
 
 // items
-$item-bg: $light-gray;
-$item-border: darken($item-bg, 8%);
-$item-text-color: $dark-gray;
+$item-border-width: 4px;
 
 // page-content
 $page-content-sidebar-width: 30rem;
