setup media query mixins

--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -2,16 +2,26 @@
   display: flex;
   max-width: $site-max-width;
   margin: 0 auto;
-  padding: $large-space $space;
   height: $page-content-height;
+
+  @include desktop () {
+    padding: $large-space $space;
+    }
 }
 .page-content--sidebar {
-  display: flex;
+  // display: flex;
+  display: none;
   width: $page-content-sidebar-width;
   padding-right: $large-space;
+  @include desktop () {
+    display: flex;
+  }
 }
 
 .page-content--main {
   display: flex;
-  width: $page-content-main-width;
+  width: 100%;
+    @include desktop () {
+    width: $page-content-main-width;
+  }
 }
