--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -4,6 +4,7 @@
 }
 .header--content {
   display: flex;
+  align-items: center;
   height: $header-height;
   justify-content: space-between;
   max-width: $site-max-width;
@@ -12,4 +13,13 @@
 }
 .header--title {
   margin: 0;
+}
+
+.header-nav-toggle {
+  cursor: pointer;
+  height: 2rem;
+  width: 2rem;
+    @include desktop () {
+      display: none;
+    };
 }
